# replayai

./: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  worklog.md
.github/workflows/: ci.yml  deploy-gate.yml  drift-check.yml  replay-regression.yml
db/: custom.db
mini-services/recording-service/: index.ts  package.json
prisma/: schema.prisma  seed.ts
scripts/: dev.sh
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/examples/: langchain_demo.py  quickstart.py
sdks/python/replayai/: __init__.py  __main__.py  cli.py  config.py  context.py  cost.py  dashboard_html.py  dashboard_server.py  local_store.py  redact.py  session.py  steps.py  store.py  subprocess_helper.py
sdks/python/replayai/integrations/: __init__.py  langchain.py
sdks/python/replayai_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/examples/: quickstart.ts
sdks/typescript/src/: cli.ts  config.ts  context.ts  cost.ts  dashboard-server.ts  index.ts  redact.ts  session.ts  steps.ts  store.ts  types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/comments/: route.ts
src/app/api/comments/[id]/: route.ts
src/app/api/github/: route.ts
src/app/api/onboarding/: route.ts
src/app/api/projects/: route.ts
src/app/api/projects/[slug]/: route.ts
src/app/api/sessions/: route.ts
src/app/api/sessions/[id]/: route.ts
src/app/api/sessions/[id]/export/: route.ts
src/app/api/stats/: route.ts
src/app/api/stats/social/: route.ts
src/app/api/tokens/: route.ts
src/app/api/tokens/[id]/: route.ts
src/app/api/waitlist/: route.ts
src/components/: app-shell.tsx  providers.tsx
src/components/docs/: docs-app.tsx  markdown.tsx
src/components/landing/: cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  pricing.tsx  problem.tsx  roadmap.tsx  social-proof.tsx  testimonials.tsx  theme-toggle.tsx  waitlist-form.tsx
src/components/onboarding/: onboarding-app.tsx
src/components/replay/: code-block.tsx  dashboard.tsx  diff-view.tsx  export-view.tsx  recent-sessions-feed.tsx  record-session-dialog.tsx  relative-time.tsx  replay-timeline.tsx  session-search.tsx  sessions-list.tsx  stats-overview.tsx
src/hooks/: use-api.ts  use-github-stars.ts  use-mounted.ts  use-starred-sessions.ts
src/lib/: api.ts  auth.ts  docs-content.ts  docs-utils.ts  mailer.ts  mappers.ts  notify.ts  rate-limit.ts  replay-data.ts  seed-data.ts  session-ingest.ts  site-config.ts  validation.ts
tool-results/: read_1781816308109_cce37b71b60f.txt
